# dbgpts

agents/data-discovery-agent/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
agents/data-discovery-agent/data_discovery_agent/: __init__.py  action.py
agents/summarizer-agent-example/: pyproject.toml
operators/awel-two-operator/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
operators/awel-two-operator/awel_two_operator/: __init__.py
resources/execute-mysql-sql/: MANIFEST.in  README.md  dbgpts.toml  pyproject.toml
resources/execute-mysql-sql/execute_mysql_sql/: __init__.py
resources/simple-calculator-example/: pyproject.toml
