[tool.poetry]
name = "data-discovery-agent"
version = "0.1.0"
description = "数据探索Agent"
authors = ["Johnson Guo <johnson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbgpt = {extras = ["agent"], version = "^0.5.6rc1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
