[tool.poetry]
name = "execute-mysql-sql"
version = "0.1.0"
description = "根据mysql服务器的信息，执行mysql sql语句"
authors = ["Fangyin Cheng <staneyffer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
